--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Vừa mới tạo</h1>
-    <button>Submit</button>
+    <h1>Vừa mới tạo new app</h1>
+    <button>Submit new</button>
 </body>
 </html>
